tests/machine/x/c/map_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_assign.c:49:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   49 |   map_int_bool_put(&_t1, "alice", 1);
      |                          ^~~~~~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_assign.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_assign.c:50:16: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   50 |   int scores = _t1;
      |                ^~~
/workspace/mochi/tests/machine/x/c/map_assign.c:51:9: error: request for member ‘data’ in something not a structure or union
   51 |   scores.data["bob"] = 2;
      |         ^
/workspace/mochi/tests/machine/x/c/map_assign.c:52:24: error: request for member ‘data’ in something not a structure or union
   52 |   printf("%d\n", scores.data["bob"]);
      |                        ^

   1: #include <stdio.h>
